Change namespace to avoid Major slf4j reference confusion

--- a/slf4j-api/src/main/java/org/slf4j/impl/package.html
+++ b/slf4j-api/src/main/java/org/slf4j/impl/package.html
@@ -10,7 +10,7 @@
   <body>
     
     <p>Implementations of core logging interfaces defined in the {@link 
-    org.slf4j} package.</p>
+    org1.slf4j} package.</p>
     
     <hr/>
   </body> 
